新增无人值守手机版指定提交

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /.settings
+/WebRoot/WEB-INF/classes/*.class
+/WebRoot/WEB-INF/classes/com/lmk/common/model/*.class
+/WebRoot/WEB-INF/classes/com/lmk/spider/*.class
